For a detailed list of changes see the repository Log at:
   http://code.google.com/p/wfdb-app-toolbox/source/list

0.9.7 (TBA)
       Fixed issues when reading data stream with warning messages. Added data
       integrity check in RDSAMP.

0.9.6.1 (February 10, 2013):
	Minor bug fixes with JAR files loading libraries.

0.9.6 (February 6, 2013):
	Added support to GNU Octave version 3.6.4 (requires Octave Java package). 
	Added single, and fixed point, and higher precision options to RDSAMP. 
	Added a system wide WFDB path configuration to WFDBLOADLIB. The default 
	search is now the current directory, {WFDB_HOME}/database, and http:physionet/physiobank/database. 
	So databases can be stored in a single centralized location on the user's machine
	({WFDB_HOME}/database). Added the function WOODY (average with alignment), and HTML
	help files.

0.9.5 (December 6, 2013):
	Updated native libs to WFDB 10.5.22. Added WFDBEXEC 
	(runs WFDB native commands in their native API and by a system call through the JVM), 
    EDR, GQRS, MSENTROPY. Added framework for users who want to run their own custom version
    of the WFDB native binaries. Any user who can successfully compile and run WFDB executables 
    on their system should be able to use most functionality of this toolbox provided that 
    they install the binaries in the '/mcode/nativelibs/custom' directory (see README for details).
    Added WDFB and WFDBCAL environment variables and ability to set and change them. Added 
    system wide debugging information and variable to allow configuration of maximum network
    waiting time (default = 1 second).
	
0.9.4.3 (06 November 2013):
	Fixed libcurl and path issue.

0.9.4.2 (05 November 2013):
	Added more diagnostic information and fixed some issues with using spaces in Windows directories.
	
0.9.4.1 (04 November 2013):
	Fixed library path issues with Windows systems.
	
0.9.4 (01 November 2013):